--- a/src/Components/images.css
+++ b/src/Components/images.css
@@ -76,3 +76,29 @@
         width: 8vw;
     }
 }
+
+/* scroll bar */ /* scroll bar */ /* scroll bar */
+
+@media all and (min-width: 1024px)
+{
+    ::-webkit-scrollbar {
+        width: 10px;
+    }
+  
+    /* Track */
+    ::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 5px grey; 
+        background: #f1f1f1;
+    }
+    
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        background: #888;
+        border-radius: 10px;
+    }
+    
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+        background: #555;
+    }
+}
