--- a/src/LandPage.css
+++ b/src/LandPage.css
@@ -13,83 +13,63 @@
 }
 
 .language {
-    display: flex;
-    justify-content: center;
-}
-
-.toggle {
-    position: absolute;
-    width: 10em;
-    height: 5em;
-    font-size: var(--font-size); 
-    margin: 0;
-    filter: opacity(0);
-    cursor: pointer;
-    z-index: 2;
-}
-
-.toggle ~ .switch {
   position: absolute;
-  width: 10em;
-  height: 5em;
-  font-size: var(--font-size); 
-  background: linear-gradient(silver, whitesmoke);
-  border-radius: 2.5em;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.toggle ~ .switch .inner {
-  width: 8em;
-  height: 3.5em;
-  background: linear-gradient(red, red);
-  border-radius: 2em;
-  box-shadow: inset 0 0 1.5em rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-}
-
-.toggle ~ .switch .inner .disc {
-  width: 3.5em;
-  height: 3.5em;
-  background: linear-gradient(to top, silver, whitesmoke);
-  border-radius: 50%;
-  box-shadow: 0 0.4em 0.6em rgba(0, 0, 0, 0.2);
-  position: relative;
-  left: -30%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: 0.5s;
-}
-
-.toggle ~ .switch .inner .disc::before {
-  content: 'English';
-  position: absolute;
-  width: 95%;
-  height: 80%;
-  background: linear-gradient(silver, whitesmoke);
-  border-radius: 50%;
+  top: 0; right: 0; bottom: 0; left: 0;
+  height: 40px;
+  margin: auto;
   text-align: center;
-  line-height: calc(3.5em * 0.8);
-  font-family: sans-serif;
-  color: red;
-}
-
-.toggle:checked ~ .switch .inner {
-  background: linear-gradient(green, limegreen);
-}
-
-.toggle:checked ~ .switch .inner .disc {
-  left: 30%;
-}
-
-.toggle:checked ~ .switch .inner .disc::before {
-  content: 'עברית';
-  color: limegreen;
 }
 
 
+.switch input {
+  position: absolute;
+  opacity: 0;
+}
 
+/**
+ * 1. Adjust this to size
+ */
+
+.switch {
+  display: inline-block;
+  font-size: 20px; /* 1 */
+  height: 2em;
+  width: 4em;
+  background: #69a081;
+  border-radius: 1em;
+}
+
+.switch div {
+  height: 2em;
+  width: 2em;
+  border-radius: 1em;
+  background: #000;
+  box-shadow: 0 0.1em 0.3em rgba(0,0,0,0.3);
+  -webkit-transition: all 300ms;
+     -moz-transition: all 300ms;
+          transition: all 300ms;
+}
+
+.switch input:checked + div {
+  -webkit-transform: translate3d(100%, 0, 0);
+     -moz-transform: translate3d(100%, 0, 0);
+          transform: translate3d(100%, 0, 0);
+}
+
+.slider:after
+{
+  content:'English';
+  color: white;
+  transform: translate(-50%,-50%);
+  top: 50%;
+  left: 50%;
+  font-size: 10px;
+  font-family: Verdana, sans-serif;
+}
+
+input:checked + .slider:after
+{  
+  content:'עברית';
+  position: absolute;
+}
 
